# platform.core.appfw.pkgmgr-server

./: .CMakeLists.txt.swp  .cproject  .project  CMakeLists.txt  blacklist.sql  org.tizen.pkgmgr.conf.in  org.tizen.pkgmgr.service.in  package-manager.service.in  pkgmgr-server.service.in  restriction.sql
include/: pkgmgr-server.h  pm-queue.h
packaging/: pkgmgr-server.manifest  pkgmgr-server.spec
src/: db.c  pkgmgr-server.c  pm-queue.c  request.c  restriction_mode.c
